# EuphoriaEngine

./: CMakeLists.txt  CMakePresets.json  RunCMake.ps1  RunCMake.sh  plCMakeConfig.cmake
Code/: CMakeLists.txt
Code/BuildSystem/CMake/: FindPlOpenXR.cmake  plPlatform.cmake  plUtils.cmake
Code/BuildSystem/Web/: HowToBuild.md  build-web.ps1  em-default.html
Code/Engine/: plBuildInfo.h
Code/Engine/Core/: CorePCH.cpp
Code/Engine/Foundation/: Basics.h  CMakeLists.txt  FoundationPCH.cpp  UserConfig.h  plEngine.natvis  plEngine.py
Code/Engine/RHI/: CMakeLists.txt  RHIDLL.h  RHIPCH.cpp  RHIPCH.h
Code/Engine/RHIVulkan/: CMakeLists.txt  RHIVulkanDLL.h  RHIVulkanPCH.cpp  RHIVulkanPCH.h
Code/Engine/RHIVulkan/Adapter/: VKAdapter.h
Code/Engine/RHIVulkan/Adapter/Implementation/: VKAdapter.cpp
Code/Engine/RHIVulkan/CommandQueue/: VKCommandQueue.h
Code/Engine/RHIVulkan/CommandQueue/Implementation/: VKCommandQueue.cpp
Code/Engine/RHIVulkan/Device/: VKDevice.h
Code/Engine/RHIVulkan/Device/Implementation/: VKDevice.cpp
Code/Engine/RHIVulkan/Fence/: VKFence.h
Code/Engine/RHIVulkan/Fence/Implementation/: VKFence.cpp
Code/Engine/RHIVulkan/Instance/: VKInstance.h
Code/Engine/RHIVulkan/Instance/Implementation/: VKInstance.cpp
Code/Engine/RHIVulkan/Memory/: VKMemory.h
Code/Engine/RHIVulkan/Memory/Implementation/: VKMemory.cpp
Code/Engine/RHIVulkan/Resource/: VKResource.h
Code/Engine/RHIVulkan/Resource/Implementation/: VKResource.cpp
Code/Engine/Texture/: CMakeLists.txt  TexturePCH.cpp
Data/: CMakeLists.txt
Data/Base/: CommonBinaries.plExportFilter
(+755 files in other folders)
